Se realizan refactorizan y documentan metodos